@@ -1,3 +1,9 @@
+2002-01-21  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* conf/mount/mount_linux.c (mount_linux): fix breakage introduced
+	by the loop device mount support. Linux mount takes a real string
+	as the last argument, unless the mount type is NFS, NCP, or SMB.
+
 2002-01-20  Erez Zadok  <ezk@localhost.localdomain>
 
 	* hlfsd/hlfsd.h (HLFSD_VERSION): up version of hlfsd to 1.2,
